<resources>
    <string name="app_name">Delivery Service</string>
    <string name="action_settings">Settings</string>
    <string name="delivery_service_name">Delivery Service</string>
    <string name="showInMap">Показать на карте</string>
    <string-array name="status_name_RU">
        <item>Активные</item>
        <item>Завершённые</item>
        <item>Все</item>
    </string-array>
    <string-array name="status_name_EN">
        <item>Active</item>
        <item>Completed</item>
        <item>All</item>
    </string-array>

    <string-array name="weigh_units">
        <item>Килограммы</item>
        <item>Граммы</item>
        <item>Фунты</item>
    </string-array>
    <string-array name="size_units">
        <item>Метры</item>
        <item>Сантиметры</item>
        <item>Миллиметры</item>
        <item>Футы</item>
    </string-array>

    <string name="title_activity_add_parcel">Add Parcel</string>
    <string name="Map">Map</string>
    <string name="Enter_comment">Введите комментарий</string>
    <string name="btn_company">Компания</string>
    <string name="btn_person">Част. Лицо</string>
    <string name="EXTRA_SUBJECT_VALUE">DeliveryService</string>
    <string name="notification_title">Доставка DeliveryService!</string>
    <string name="addparcel">AddParcel</string>
    <string name="empty_string_error">Обязательно для заполнения</string>
    <string name="error_email_format">Неверный формат Email</string>
    <string name="error_auth_email_format">Неверный формат(используйте email аккаунта)</string>
    <string name="error_phone_number">Номер должен быть в формате +7(8)XXXXXXXXXX (или городской номер с кодом из трёх цифр (XXX)XXXXXXX)</string>
    <string name="parcel_param_error">Размер и вес должны быть непустые и больше нуля</string>
    <string name="signin">Войти</string>
    <string name="my_parcels">Мои посылки</string>
    <string name="added_by_me">Добавленные мной</string>
    <string name="settings">Настройки</string>
    <string name="unseccessful_call">Unsuccessful call</string>
    <string name="permissions_error">Не предоставлены права доступа</string>
    <string name="address_error">Адрес для указанных координат отсутствует</string>
    <string name="ethernet_error">Для получения адреса по маркеру необходимо интернет соединение</string>
    <string name="coordinates_not_found_error">Координаты посылки не установлены</string>
    <string name="Save_whatever">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="GPS_unavailable_error">GooglePlayServices is unavailable ):</string>
    <string name="btn_map">Готово</string>
    <string name="customer_head">Данные заказчика:</string>
    <string name="hint_address">Адрес*</string>
    <string name="hint_fullname">ФИО*</string>
    <string name="email">Email</string>
    <string name="hint_phone">Телефон*</string>
    <string name="btn_set_type">Выбрать тип</string>
    <string name="hint_company_name">Название компании</string>
    <string name="destination_head">Данные адресата:</string>
    <string name="coordinates_head">Координаты</string>
    <string name="lat_value_text">lat:</string>
    <string name="lng_value_text">lng:</string>
    <string name="parcel_head">Данные посылки:</string>
    <string name="hint_parcel_name">Название*</string>
    <string name="hint_parcel_size">Размер*</string>
    <string name="hint_parcel_weigh">Вес*</string>
    <string name="hint_delivery_date">Дата доставки</string>
    <string name="hint_price">Цена:</string>
    <string name="hint_comment">Введите комментарий*</string>
    <string name="hint_notif">Оповестить</string>
    <string name="hint_save">Сохранить</string>
    <string name="hint_set_status">Изменить статус</string>
    <string name="dialog_parcel_company">Компания</string>
    <string name="dialog_parcel_person">Частное лицо</string>
    <string name="recycler_completed">Завершённая</string>
    <string name="title_activity_firebase_auth">Sign in</string>
    <string name="firebase_login">Логин</string>
    <string name="firebase_password_hint">Пароль</string>
    <string name="firebase_login_hint">Логин</string>
    <string name="btn_SignIn">Войти</string>
    <string name="SignInAs">Вы вошли как</string>
    <string name="firebase_sign_in_error">Вход не выполнен</string>
    <string name="wrong_password_error">Длинна пароля должна быть не меньше 8 символов</string>
    <string name="nav_email">Вход не выполнен</string>
    <string name="nav_user_status" />
    <string name="ADMIN">Админ</string>
    <string name="COURIER">Курьер</string>
    <string name="btn_choose_courier">Назначить курьера*</string>
    <string name="courier_does_not_choose_error">Необходимо назначить курьера</string>
    <string name="invalid_fields_error">Проверьте правильность заполненных полей</string>
    <string name="btn_SignOut">Выйти</string>
    <string name="new_and_canceled">Новые и отменённые</string>
    <string name="edit_parcel">Edit Parcel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="weigh_settings">Вес</string>
    <string name="size_settings">Размер</string>
    <string name="text_units">Единицы измерения</string>
</resources>
