<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_units"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/size_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_settings"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:textSize="18sp"
        android:layout_below="@id/textView_units"/>

    <TextView
        android:id="@+id/weigh_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weigh_settings"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_below="@id/size_settings"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/textView_units"/>
    <Spinner
        android:id="@+id/weight_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/size_settings"
        />

</RelativeLayout>