<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.FirebaseAuthActivity"
    android:background="@android:color/white">


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:background="@drawable/firebase_auth_logo"/>


    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
        android:id="@+id/firebase_login_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="200dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firebase_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firebase_login_hint"
            android:inputType="textPersonName"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
        android:id="@+id/firebase_password_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:layout_below="@id/firebase_login_TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firebase_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firebase_password_hint"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_below="@id/firebase_login_TextInputLayout"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/PrimaryLight"
        android:text="@string/btn_SignIn"
        android:layout_below="@id/firebase_password_TextInputLayout"/>
    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textColor="@color/PrimaryLight"
        android:text="@string/btn_SignOut"
        android:layout_below="@id/firebase_password_TextInputLayout"
        android:layout_alignParentEnd="true"/>
    <ProgressBar
        android:id="@+id/firebase_auth_progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>